--- a/chaotically-blessed-thanksgiving.html
+++ b/chaotically-blessed-thanksgiving.html
@@ -2,149 +2,198 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>A Chaotically Blessed Thanksgiving (Hold the Family Drama)</title>
+  <title>A Chaotically Blessed Thanksgiving (Hold the Family Drama) – Laurel’s Organized Chaos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta
-    name="description"
-    content="When your husband isn’t welcome, neither are you or your kids — so you build your own Thanksgiving that’s drama-free, chaotic, and actually full of love."
-  />
 
-  <!-- Gothic fantasy fonts -->
+  <!-- Fonts + main styles -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="styles.css" />
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="../styles.css" />
+  <script src="../script.js" defer></script>
 </head>
 <body>
-  <header class="site-header">
-    <div>
-      <div class="logo-text">Laurel’s Organized Chaos</div>
-      <div class="site-tagline">Goth mom, soft witch, professional chaos curator.</div>
-    </div>
-
-    <nav class="nav-links">
-      <a href="index.html" data-nav="home">Home</a>
-      <a href="blog.html" data-nav="blog">Blog</a>
-      <a href="store.html" data-nav="store">Store</a>
-      <a href="about.html" data-nav="about">About</a>
-      <a href="contact.html" data-nav="contact">Contact</a>
-    </nav>
-  </header>
-
-  <main class="page-wrapper">
-    <!-- Hero style header for the post -->
-    <section class="hero">
-      <div class="rune-frame">
-        <div class="rune-frame-side left">ᛉ ᛟ ᛞ ᛇ</div>
-        <div class="rune-frame-side right">ᛇ ᛞ ᛟ ᛉ</div>
-
-        <h1 class="hero-title">A Chaotically Blessed Thanksgiving (Hold the Family Drama)</h1>
-        <p class="hero-lead">
-          When my husband isn’t welcome, neither am I or our kids. So instead of begging for a seat
-          at someone else’s table, we built our own — messy, loud, and full of real love.
-        </p>
-        <p class="hero-sub">
-          This is the story of an early-morning Thanksgiving that started with baby bottles and
-          toddlers, and turned into a reminder that “family” is the people who actually show up
-          with respect, not the ones who demand access while talking shit.
-        </p>
-      </div>
-    </section>
-
-    <!-- Blood divider -->
-    <div class="divider-blood" aria-hidden="true">
-      <div class="divider-blood-line"></div>
-      <div class="drip d1"></div>
-      <div class="drip d2"></div>
-      <div class="drip d3"></div>
-    </div>
-
-    <!-- Article body -->
-    <article>
-      <p>
-        Most of my family has decided they hate my husband. Not because they’ve actually spent time
-        with him, but because it’s easier to believe rumors than to admit they might have been
-        wrong about people in their own bloodline. At some point I decided: if my husband isn’t
-        welcome, then neither am I, and absolutely neither are our kids.
-      </p>
-
-      <p>
-        So this year, instead of forcing myself into a house full of fake smiles and side-eye, I
-        had Thanksgiving early with the people who <em>didn’t</em> sign up for the drama. The ones
-        who treat Tyler with basic human respect. The ones who don’t expect me to split myself in
-        half to make everyone else comfortable.
-      </p>
-
-      <p>
-        The morning started at 7:15 a.m. when Nash and Hudson woke me up (because of course they
-        did). I got up, made Nash her bottle, wrangled Hudson, and we slid straight into holiday
-        chaos: feeding, cleaning, trying to time naps, and prepping food while making sure nobody
-        launched themselves off the furniture.
-      </p>
-
-      <p>
-        It wasn’t peaceful. It wasn’t aesthetic. There were crumbs, meltdowns, and the constant
-        background noise of “Mom? Mom. Mooooom.” But it was ours.
-      </p>
-
-      <h2>Choosing Our Own Table</h2>
-
-      <p>
-        At some point you have to stop chasing people who only love the version of you they made up
-        in their heads. This year, I chose not to sit at a table where my husband is treated like a
-        problem to be tolerated. I chose to build a smaller table with fewer people and more actual
-        safety.
-      </p>
-
-      <p>
-        Our Thanksgiving wasn’t perfect. The turkey wasn’t carved in some cinematic way. The kids
-        were picky about the food. We were tired. But there was laughter, there were inside jokes,
-        there were real hugs instead of stiff side-hugs with resentment tucked underneath.
-      </p>
-
-      <h2>Family Isn’t Always Blood</h2>
-
-      <p>
-        The older I get, the more I realize that “family” is a very specific kind of spell. It’s
-        not formed by DNA; it’s formed by the people who defend you when you’re not in the room,
-        who accept your partner, who love your kids, and who don’t ask you to shrink.
-      </p>
-
-      <p>
-        I’m done apologizing for choosing my husband and my kids over people who refuse to treat
-        us like a unit. I’m done chasing approval I will never get. I’m allowed to protect my
-        peace, even on holidays that are supposed to be “for family.”
-      </p>
-
-      <h2>My Little Gratitude List</h2>
-
-      <ul>
-        <li>For a husband who loves me, even when I’m exhausted and overstimulated.</li>
-        <li>For tiny humans who drive me insane and also keep me going.</li>
-        <li>For friends and relatives who didn’t join the drama and just showed up with love.</li>
-        <li>For the reminder that my home can be a safe place, even if certain people never walk through the door again.</li>
-      </ul>
-
-      <p>
-        This Thanksgiving wasn’t about pretending everything is fine. It was about admitting that
-        some things are broken, choosing not to keep cutting myself on the pieces, and building
-        something better with the people who actually want to be here.
-      </p>
-
-      <p><em>
-        If you spent a holiday away from “family” this year to protect your sanity, you’re not
-        selfish. You’re healing.
-      </em></p>
-    </article>
-  </main>
-
-  <div class="sigil" aria-hidden="true">
-    <div class="sigil-ring"></div>
-    <div class="sigil-core"></div>
+<header class="site-header">
+  <div>
+    <div class="logo-text">Laurel’s Organized Chaos</div>
+    <div class="site-tagline">Goth mom, soft witch, organized disaster.</div>
   </div>
 
-  <footer class="site-footer">
-    © 2025 Laurel’s Organized Chaos · Chaos, but make it witchy.
-  </footer>
+  <nav class="nav-links">
+    <a href="../index.html" data-nav="home">Home</a>
+    <a href="../blog.html" data-nav="blog">Blog</a>
+    <a href="../store.html" data-nav="store">Store</a>
+    <a href="../about.html" data-nav="about">About</a>
+    <a href="../contact.html" data-nav="contact">Contact</a>
+  </nav>
+</header>
+
+<main class="page-wrapper">
+  <article class="blog-post">
+    <header class="rune-frame" style="margin-bottom: 2.5rem;">
+      <h1 class="hero-title">A Chaotically Blessed Thanksgiving (Hold the Family Drama)</h1>
+      <p class="hero-sub">
+        This year’s Thanksgiving wasn’t picture-perfect. It was folding chairs, foil pans, kids running around,
+        and a tablecloth that definitely wasn’t ironed. It was also the first time I chose peace over blood family
+        drama — and honestly, it tasted better than any turkey ever has.
+      </p>
+      <p class="hero-sub">
+        Most of my family has decided they hate my husband based on rumors and shit they’ve heard,
+        <em>not</em> based on actually knowing him. So this year I made a very clear rule:
+        if he’s not welcome, neither am I, and neither are our kids. We don’t split ourselves up just to
+        make other people comfortable.
+      </p>
+    </header>
+
+    <!-- Hero food spread -->
+    <figure class="blog-image">
+      <img src="../images/thanksgiving1.jpg"
+           alt="A small crowded table covered in Thanksgiving food: ham, stuffing, potatoes, sweet potatoes, deviled eggs, and snacks." />
+      <figcaption>
+        Not a Pinterest table. A real-life, “we made this happen anyway” table.
+      </figcaption>
+    </figure>
+
+    <section class="section">
+      <h2 class="section-title">Choosing Our Own Table</h2>
+      <p class="section-text">
+        Instead of forcing everyone into the same fake-happy room, we did something different:
+        we had Thanksgiving early with the people who actually show up for us. Friends and family
+        who don’t talk shit, who don’t make my husband the villain in a story they never bothered
+        to learn the truth about, who love our kids without keeping score.
+      </p>
+      <p class="section-text">
+        Was it fancy? Absolutely not. We had chairs that didn’t match, food in foil pans, and kids
+        climbing everywhere. But it felt safe. It felt like home. And for once, I didn’t have to sit at a table
+        pretending everything was fine while my nervous system quietly set itself on fire.
+      </p>
+    </section>
+
+    <!-- Prep photos row 1 -->
+    <section class="section">
+      <h2 class="section-title">The Chaos Kitchen Chronicles</h2>
+      <p class="section-text">
+        The day started stupid early, because my kids treat “holiday” like “bonus reason to wake mom up at dawn.”
+        Once Nash and Hudson were up, I gave Nash her bottle, put on some cartoons, and started my favorite part:
+        cooking way too much food for the amount of counter space I actually have.
+      </p>
+
+      <div class="blog-image-grid">
+        <figure>
+          <img src="../images/thanksgiving6.jpg"
+               alt="Pot of eggs boiling on the stove for deviled eggs." />
+          <figcaption>Step one: sacrifice a dozen eggs to the deviled egg gods.</figcaption>
+        </figure>
+
+        <figure>
+          <img src="../images/thanksgiving5.jpg"
+               alt="Glass dish of sweet potatoes topped with brown sugar, cinnamon, and butter before baking." />
+          <figcaption>Sweet potatoes getting the brown sugar &amp; cinnamon treatment.</figcaption>
+        </figure>
+      </div>
+
+      <p class="section-text">
+        My kitchen looked like a tornado hit a grocery store. I had deviled eggs cooling on one side, sweet potatoes
+        drowning in brown sugar on the other, kids yelling in the background, and that “I’m on my third cup of coffee
+        and still exhausted” glaze in my eyes. You know, holiday spirit.
+      </p>
+    </section>
+
+    <!-- Oven + side dishes -->
+    <section class="section">
+      <div class="blog-image-grid">
+        <figure>
+          <img src="../images/thanksgiving4.jpg"
+               alt="A foil-wrapped dish baking in the oven, seen through the oven window." />
+          <figcaption>
+            The “is it done yet?” oven stare. Highly advanced cooking technique.
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="../images/thanksgiving2.jpg"
+               alt="Table with green bean casserole, a baked pie, and boxed stuffing in the background." />
+          <figcaption>
+            Green bean casserole, store-bought pie, boxed stuffing, zero shame.
+          </figcaption>
+        </figure>
+      </div>
+
+      <figure class="blog-image">
+        <img src="../images/thanksgiving3.jpg"
+             alt="Close-up of a foil-wrapped dish next to a baked pie on a red towel." />
+        <figcaption>
+          Not everything needs to be pretty. Sometimes it just needs to be covered in foil and still warm.
+        </figcaption>
+      </figure>
+
+      <p class="section-text">
+        We did a little of everything: homemade dishes, shortcut boxes, and “heat it up and call it good.”
+        Because the point wasn’t to impress anyone — it was to feed people we love and make new memories
+        that didn’t hurt to think about.
+      </p>
+    </section>
+
+    <!-- Final spread shot again / recap -->
+    <section class="section">
+      <h2 class="section-title">More Snack Board Than Magazine Spread</h2>
+
+      <figure class="blog-image">
+        <img src="../images/thanksgiving1.jpg"
+             alt="Full Thanksgiving spread on a small table with ham, stuffing, potatoes, sweet potatoes with marshmallows, a snack tray, and deviled eggs." />
+        <figcaption>
+          Ham, stuffing, mashed potatoes, sweet potatoes with marshmallows,
+          deviled eggs, snack trays — and zero drama seasoning.
+        </figcaption>
+      </figure>
+
+      <p class="section-text">
+        By the time everything was on the table, it looked exactly like my life: a little messy, a little cramped,
+        definitely not curated — but full. Full of food, full of kids, full of people who actually wanted to be there.
+      </p>
+      <p class="section-text">
+        We laughed, we ate too much, we went back for seconds, and nobody made snide comments
+        about my husband, my parenting, or my choices. Nobody punished my kids for existing.
+        We were allowed to just… be a family.
+      </p>
+    </section>
+
+    <section class="section">
+      <h2 class="section-title">Choosing Peace Over Approval</h2>
+      <p class="section-text">
+        I’m not saying it didn’t hurt. It stings knowing that some people would rather cling to rumors
+        than get to know the man I married and the father of my kids. It hurts that holidays
+        come with this pressure to “keep the peace” by abandoning yourself.
+      </p>
+      <p class="section-text">
+        But this year, I realized I’m done sacrificing my little family’s peace so other people can
+        keep pretending theirs isn’t toxic. If you can’t respect my husband, you don’t get access
+        to me or our kids. Period.
+      </p>
+      <p class="section-text">
+        So no, this Thanksgiving wasn’t traditional. It was better. It was mine.
+        It was ours. A tiny, chaotic, blessed little bubble of mashed potatoes,
+        laughter, and actual love. That’s the kind of holiday I want my kids to remember.
+      </p>
+    </section>
+
+    <section class="section">
+      <h2 class="section-title">If You’re Spending the Holidays Differently This Year…</h2>
+      <p class="section-text">
+        If you’re skipping a family gathering, changing plans, or doing something “unusual” this year
+        to protect your mental health or your partner or your kids — I see you. You’re not selfish.
+        You’re not dramatic. You’re allowed to choose peace, even if it looks nothing like the
+        Hallmark version.
+      </p>
+      <p class="section-text">
+        May your holidays be full of people who show up, food that doesn’t have to be perfect,
+        and the realization that you’re allowed to build your own table — even if it’s covered
+        in foil pans and paper plates.
+      </p>
+    </section>
+  </article>
+</main>
+
+<footer class="site-footer">
+  © 2025 Laurel’s Organized Chaos · Chaos, but make it witchy.
+</footer>
 </body>
 </html>
