--- a/chaotically-blessed-thanksgiving.html
+++ b/chaotically-blessed-thanksgiving.html
@@ -7,8 +7,8 @@
 
   <!-- Fonts + main styles -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css" />
-  <script src="../script.js" defer></script>
+  <link rel="stylesheet" href="styles.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
 <header class="site-header">
@@ -18,11 +18,11 @@
   </div>
 
   <nav class="nav-links">
-    <a href="../index.html" data-nav="home">Home</a>
-    <a href="../blog.html" data-nav="blog">Blog</a>
-    <a href="../store.html" data-nav="store">Store</a>
-    <a href="../about.html" data-nav="about">About</a>
-    <a href="../contact.html" data-nav="contact">Contact</a>
+    <a href="index.html" data-nav="home">Home</a>
+    <a href="blog.html" data-nav="blog">Blog</a>
+    <a href="store.html" data-nav="store">Store</a>
+    <a href="about.html" data-nav="about">About</a>
+    <a href="contact.html" data-nav="contact">Contact</a>
   </nav>
 </header>
 
@@ -45,7 +45,7 @@
 
     <!-- Hero food spread -->
     <figure class="blog-image">
-      <img src="../images/thanksgiving1.jpg"
+      <img src="images/thanksgiving1.jpg"
            alt="A small crowded table covered in Thanksgiving food: ham, stuffing, potatoes, sweet potatoes, deviled eggs, and snacks." />
       <figcaption>
         Not a Pinterest table. A real-life, “we made this happen anyway” table.
@@ -78,13 +78,13 @@
 
       <div class="blog-image-grid">
         <figure>
-          <img src="../images/thanksgiving6.jpg"
+          <img src="images/thanksgiving6.jpg"
                alt="Pot of eggs boiling on the stove for deviled eggs." />
           <figcaption>Step one: sacrifice a dozen eggs to the deviled egg gods.</figcaption>
         </figure>
 
         <figure>
-          <img src="../images/thanksgiving5.jpg"
+          <img src="images/thanksgiving5.jpg"
                alt="Glass dish of sweet potatoes topped with brown sugar, cinnamon, and butter before baking." />
           <figcaption>Sweet potatoes getting the brown sugar &amp; cinnamon treatment.</figcaption>
         </figure>
@@ -101,7 +101,7 @@
     <section class="section">
       <div class="blog-image-grid">
         <figure>
-          <img src="../images/thanksgiving4.jpg"
+          <img src="images/thanksgiving4.jpg"
                alt="A foil-wrapped dish baking in the oven, seen through the oven window." />
           <figcaption>
             The “is it done yet?” oven stare. Highly advanced cooking technique.
@@ -109,7 +109,7 @@
         </figure>
 
         <figure>
-          <img src="../images/thanksgiving2.jpg"
+          <img src="images/thanksgiving2.jpg"
                alt="Table with green bean casserole, a baked pie, and boxed stuffing in the background." />
           <figcaption>
             Green bean casserole, store-bought pie, boxed stuffing, zero shame.
@@ -118,7 +118,7 @@
       </div>
 
       <figure class="blog-image">
-        <img src="../images/thanksgiving3.jpg"
+        <img src="images/thanksgiving3.jpg"
              alt="Close-up of a foil-wrapped dish next to a baked pie on a red towel." />
         <figcaption>
           Not everything needs to be pretty. Sometimes it just needs to be covered in foil and still warm.
@@ -132,12 +132,12 @@
       </p>
     </section>
 
-    <!-- Final spread shot again / recap -->
+    <!-- Final spread shot again -->
     <section class="section">
       <h2 class="section-title">More Snack Board Than Magazine Spread</h2>
 
       <figure class="blog-image">
-        <img src="../images/thanksgiving1.jpg"
+        <img src="images/thanksgiving1.jpg"
              alt="Full Thanksgiving spread on a small table with ham, stuffing, potatoes, sweet potatoes with marshmallows, a snack tray, and deviled eggs." />
         <figcaption>
           Ham, stuffing, mashed potatoes, sweet potatoes with marshmallows,
