--- a/index.html
+++ b/index.html
@@ -30,55 +30,29 @@
   </header>
 
   <main class="page-wrapper">
-    <!-- HERO with gothic rune border -->
+     <!-- HERO BANNER -->
     <section class="hero">
-      <div class="rune-frame">
-        <div class="rune-frame-side left">ᛉ ᛟ ᛞ ᛇ</div>
-        <div class="rune-frame-side right">ᛇ ᛞ ᛟ ᛉ</div>
+      <div class="hero-banner">
+        <img
+          src="images/hero-chaos-banner.png"
+          alt="Laurel’s Organized Chaos banner – raven dropping a tiny sock over a glowing cauldron with runes"
+        />
+      </div>
 
-        <h1 class="hero-title">Laurel’s Organized Chaos</h1>
+      <!-- Short intro under the banner -->
+      <div class="rune-frame hero-intro">
+        <h1 class="hero-title">Welcome to Laurel’s Organized Chaos</h1>
         <p class="hero-lead">
           Dark humor, witch energy, mom chaos, college brain, and a business to build — all crammed
           into one slightly sleep-deprived body wearing black leggings and eyeliner.
         </p>
         <p class="hero-sub">
-          This is my digital lair: blog posts, chaos tools, witchy merch, and honest stories about
-          trying to heal, parent, study, love, and build something real out of the mess.
+          If you’re here for perfectly curated influencer bullshit, you’re lost. If you’re here for honest mess,
+          witchy vibes, and trying again (and again), you’re home.
         </p>
-
-        <div class="hero-row">
-          <!-- Crow silhouette badge -->
-          <div class="crow-badge" aria-hidden="true">
-            <svg viewBox="0 0 64 64">
-              <path d="M6 30c6-6 14-8 20-8 3-6 9-10 16-10 6 0 10 2 13 6-4 0-7 1-10 3 4 1 7 3 9 6-4 0-7 1-9 2l6 6c1 1 1 3-1 3h-5l4 8c1 2-1 4-3 3l-9-5-7 4c-2 1-4 0-4-2l1-7-6-5-8 3c-2 1-4-1-3-3l4-8-4-1z"/>
-            </svg>
-          </div>
-
-          <!-- Custom SVG flourish + note -->
-          <div style="flex:1; min-width:220px;">
-            <svg viewBox="0 0 220 60" width="100%" height="60">
-              <defs>
-                <linearGradient id="flourishGrad" x1="0%" y1="0%" x2="100%" y2="0%">
-                  <stop offset="0%" stop-color="#ff3e9e"/>
-                  <stop offset="50%" stop-color="#bb6bff"/>
-                  <stop offset="100%" stop-color="#4fd8ff"/>
-                </linearGradient>
-              </defs>
-              <path d="M5 30 Q55 5 110 30 T215 30"
-                    stroke="url(#flourishGrad)" stroke-width="1.4" fill="none" />
-              <circle cx="110" cy="30" r="3" fill="#f5f1ff" />
-              <path d="M110 15 L114 23 L106 23 Z" fill="#ff3e9e" />
-              <path d="M110 45 L114 37 L106 37 Z" fill="#4fd8ff" />
-            </svg>
-
-            <p class="hero-note">
-              Currently balancing: tiny humans, therapy, assignments, wedding memories, business
-              planning, and the urge to hex anyone who talks shit about my husband without knowing him.
-            </p>
-          </div>
-        </div>
       </div>
     </section>
+
 
     <!-- Blood-drip divider -->
     <div class="divider-blood" aria-hidden="true">
@@ -136,3 +110,4 @@
   </footer>
 </body>
 </html>
+
